v0.4  2025-03-30

* Changed the displayed message.
* Added an auxiliary script.


v0.3  2014-05-01

* Changed the displayed message.
* Updated some dates.


v0.2  2014-02-02

* Makefile:
    - Added LDFLAGS.
    - Removed useless creation of the 'hello' file.


v0.1  2013-10-02

* Initial version.