@@ -1,7 +1,8 @@
 v0.4  2025-03-30
 
-* Changed the displayed message.
+* Added a basic CI test for GitHub.
 * Added an auxiliary script.
+* Changed the displayed message.
 
 
 v0.3  2014-05-01
